Use new look-up pattern of ui.rc files with KXmlGui6

--- a/addons/katebuild-plugin/plugin.qrc
+++ b/addons/katebuild-plugin/plugin.qrc
@@ -1,6 +1,6 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
-    <qresource prefix="/kxmlgui5/katebuild">
+    <qresource prefix="/katebuild/kxmlgui6">
         <file>ui.rc</file>
     </qresource>
 </RCC>
