--- a/apps/lib/autotests/tests.qrc
+++ b/apps/lib/autotests/tests.qrc
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!DOCTYPE RCC>
 <RCC version="1.0">
-    <qresource prefix="/kxmlgui5/kate">
+    <qresource prefix="/kate/kxmlgui6">
         <file alias="kateui.rc">../data/kateui.rc</file>
     </qresource>
     <qresource prefix="/katetest">
