--- a/addons/externaltools/plugin.qrc
+++ b/addons/externaltools/plugin.qrc
@@ -1,6 +1,6 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
-    <qresource prefix="/kxmlgui5/externaltools">
+    <qresource prefix="/externaltools/kxmlgui6">
         <file>ui.rc</file>
     </qresource>
     <qresource prefix="/kconfig">
