--- a/addons/gdbplugin/plugin.qrc
+++ b/addons/gdbplugin/plugin.qrc
@@ -1,6 +1,6 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
-    <qresource prefix="/kxmlgui5/kategdb">
+    <qresource prefix="/kategdb/kxmlgui6">
         <file>ui.rc</file>
     </qresource>
     <qresource prefix="/debugger">
