--- a/addons/konsole/plugin.qrc
+++ b/addons/konsole/plugin.qrc
@@ -1,6 +1,6 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
-    <qresource prefix="/kxmlgui5/katekonsole">
+    <qresource prefix="/katekonsole/kxmlgui6">
         <file>ui.rc</file>
     </qresource>
 </RCC>
