--- a/addons/search/plugin.qrc
+++ b/addons/search/plugin.qrc
@@ -1,6 +1,6 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
-    <qresource prefix="/kxmlgui5/katesearch">
+    <qresource prefix="/katesearch/kxmlgui6">
         <file>ui.rc</file>
     </qresource>
 </RCC>
