--- a/addons/xmlcheck/plugin.qrc
+++ b/addons/xmlcheck/plugin.qrc
@@ -1,6 +1,6 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
-    <qresource prefix="/kxmlgui5/katexmlcheck">
+    <qresource prefix="/katexmlcheck/kxmlgui6">
         <file>ui.rc</file>
     </qresource>
 </RCC>
