--- a/addons/xmltools/plugin.qrc
+++ b/addons/xmltools/plugin.qrc
@@ -1,6 +1,6 @@
 <!DOCTYPE RCC>
 <RCC version="1.0">
-    <qresource prefix="/kxmlgui5/katexmltools">
+    <qresource prefix="/katexmltools/kxmlgui6">
         <file>ui.rc</file>
     </qresource>
 </RCC>
